# 868_sensing

./: README.md
data_scripts/: uart_script.py
final_master_project/: CMakeLists.txt
final_master_project/c++_tutorial/: BMI.cpp  array.cpp  calculator.cpp  constants.cpp  data_types.cpp  functions.cpp  hello_world.cpp  loops.cpp  morse_ascii.cpp  object_oriented.cpp  pointer.cpp  structure.cpp
final_master_project/kdTree/: .cproject  .project  transform.py
final_master_project/kdTree/src/: CSV_reader.cpp  CSV_reader.h  example.cpp  knncpp.h  main.cpp
final_master_project/kmeans_Lloyd/: .cproject  .project  CMakeLists.txt  train.csv
final_master_project/kmeans_Lloyd/build_cu/: CMakeCache.txt  Makefile  cmake_install.cmake  kmeans_executable
final_master_project/kmeans_Lloyd/build_pc/: CMakeCache.txt  Makefile  cmake_install.cmake  kmeans_executable
final_master_project/kmeans_Lloyd/includes/: CSV_reader.h  dkm.hpp
final_master_project/kmeans_Lloyd/src/: main.cpp
final_master_project/kmeans_cpp/: CMakeLists.txt
final_master_project/kmeans_cpp/build_cu/: CMakeCache.txt  Makefile  cmake_install.cmake  kmeans_ex
final_master_project/kmeans_cpp/build_pc/: CMakeCache.txt  Makefile  cmake_install.cmake  kmeans_ex
final_master_project/kmeans_cpp/includes/: HartiganWong.hpp  Kmeans.hpp  is_edge_case.hpp  random.hpp
final_master_project/kmeans_cpp/src/: CSV_reader.cpp  main.cpp
final_master_project/knn/: .cproject  .project  CMakeLists.txt  test.csv
final_master_project/knn/build_cu/: CMakeCache.txt  Makefile  cmake_install.cmake  knn_executable
final_master_project/knn/build_pc/: CMakeCache.txt  Makefile  cmake_install.cmake  knn_executable
final_master_project/knn/includes/: KNN.h
final_master_project/knn/src/: KNN.cpp  main.cpp
final_master_project/samples/: results.py  scenarios.py
final_master_project/samples/false_positives/kmeans_Lloyd/: chair_lloyd.xlsx  large_lloyd.xlsx  med_lloyd.xlsx  small_lloyd.xlsx
final_master_project/test_framework/GoogleTest/: CMakeLists.txt  googleTestDemo.cpp  googleTestDemo.h
(+254 files in other folders)
